crates/pcb/tests/snapshots/bom__bom_capacitors_table.snap
---
source: crates/pcb/tests/bom.rs
expression: output
---
Command: pcb bom boards/Capacitors.zen -f table
Exit Code: 0

--- STDOUT ---
Legend:
 ■  Plenty available / easy to source         ■  House component       
 ■  Limited inventory / harder to source      ■  DNP (Do Not Populate) 
 ■  No inventory / hard to source                                      
┌─────┬─────────────┬─────┬──────────────┬──────────────┬─────────┬───────────────┐
│ Qty ┆ Designators ┆ MPN ┆ Alternatives ┆ Manufacturer ┆ Package ┆ Description   │
╞═════╪═════════════╪═════╪══════════════╪══════════════╪═════════╪═══════════════╡
│ 1   ┆ C1          ┆     ┆              ┆              ┆ 0402    ┆ 100nF 16V X7R │
│ 1   ┆ C2          ┆     ┆              ┆              ┆ 0805    ┆ 10uF 25V X5R  │
│ 1   ┆ C3          ┆     ┆              ┆              ┆ 0603    ┆ 1uF           │
└─────┴─────────────┴─────┴──────────────┴──────────────┴─────────┴───────────────┘
--- STDERR ---
