crates/pcb/tests/snapshots/bom__bom_default.snap
---
source: crates/pcb/tests/bom.rs
expression: output
---
Command: pcb bom boards/TestBoard.zen
Exit Code: 0

--- STDOUT ---
Legend:
  ■ House component
  ■ Plenty available / easy to source
  ■ Limited inventory / harder to source
  ■ No inventory / hard to source
┌─────────────┬─────┬──────────────┬───────────┬─────────────┬─────┐
│ Designators ┆ MPN ┆ Manufacturer ┆ Package   ┆ Description ┆ DNP │
╞═════════════╪═════╪══════════════╪═══════════╪═════════════╪═════╡
│ C1          ┆     ┆              ┆ 0402      ┆ 100nF       ┆ No  │
│ C2          ┆     ┆              ┆ 0805      ┆ 10uF        ┆ No  │
│ C3,C4       ┆     ┆              ┆ 0402      ┆ 22pF        ┆ No  │
│ D1          ┆     ┆              ┆ 0603      ┆ LED GREEN   ┆ No  │
│ D2          ┆     ┆              ┆ 0603      ┆ LED RED     ┆ No  │
│ R1,R2       ┆     ┆              ┆ 0603      ┆ 330         ┆ No  │
│ R3          ┆     ┆              ┆ 0603      ┆ 10k         ┆ No  │
│ Y1          ┆     ┆              ┆ 5032_2Pin ┆ 16MHz 18pF  ┆ No  │
└─────────────┴─────┴──────────────┴───────────┴─────────────┴─────┘
--- STDERR ---
