crates/pcb/tests/snapshots/bom__bom_module_dnp_table.snap
---
source: crates/pcb/tests/bom.rs
expression: output
---
Command: pcb bom boards/ModuleDnp.zen -f table
Exit Code: 0

--- STDOUT ---
Legend:
  ■ House component
  ■ Plenty available / easy to source
  ■ Limited inventory / harder to source
  ■ No inventory / hard to source
┌─────────────┬─────┬──────────────┬─────────┬─────────────┬─────┐
│ Designators ┆ MPN ┆ Manufacturer ┆ Package ┆ Description ┆ DNP │
╞═════════════╪═════╪══════════════╪═════════╪═════════════╪═════╡
│ C1          ┆     ┆              ┆ 0402    ┆ 100nF       ┆ Yes │
│ C2          ┆     ┆              ┆ 0805    ┆ 10uF        ┆ No  │
│ R1          ┆     ┆              ┆ 0603    ┆ 1k          ┆ No  │
│ R2          ┆     ┆              ┆ 0603    ┆ 10k         ┆ Yes │
└─────────────┴─────┴──────────────┴─────────┴─────────────┴─────┘
--- STDERR ---
