crates/pcb/tests/snapshots/bom__bom_simple_resistors_json.snap
---
source: crates/pcb/tests/bom.rs
expression: output
---
Command: pcb bom boards/SimpleResistors.zen -r bom_rules.json -f json --offline
Exit Code: 0

--- STDOUT ---
[
  {
    "path": "R1.R",
    "designator": "R1",
    "package": "0603",
    "value": "1k",
    "description": "1k",
    "component_type": "Resistor",
    "resistance": {
      "value": "1000",
      "tolerance": "0",
      "unit": "Ohms"
    },
    "offers": [
      {
        "distributor": "digikey",
        "distributor_pn": "311-1.00KHRCT-ND",
        "manufacturer": "Yageo",
        "manufacturer_pn": "RC0603FR-071KL",
        "matched_by": {
          "Generic": {
            "component_type": "Resistor",
            "resistance": {
              "value": "1000.0",
              "tolerance": "0.0",
              "unit": "Ohms"
            },
            "package": "0603"
          }
        }
      }
    ]
  },
  {
    "path": "R2.R",
    "designator": "R2",
    "package": "0603",
    "value": "1k",
    "description": "1k",
    "component_type": "Resistor",
    "resistance": {
      "value": "1000",
      "tolerance": "0",
      "unit": "Ohms"
    },
    "offers": [
      {
        "distributor": "digikey",
        "distributor_pn": "311-1.00KHRCT-ND",
        "manufacturer": "Yageo",
        "manufacturer_pn": "RC0603FR-071KL",
        "matched_by": {
          "Generic": {
            "component_type": "Resistor",
            "resistance": {
              "value": "1000.0",
              "tolerance": "0.0",
              "unit": "Ohms"
            },
            "package": "0603"
          }
        }
      }
    ]
  },
  {
    "path": "R3.R",
    "designator": "R3",
    "package": "0402",
    "value": "4.7k",
    "description": "4.7k",
    "component_type": "Resistor",
    "resistance": {
      "value": "4700.0",
      "tolerance": "0",
      "unit": "Ohms"
    },
    "offers": [
      {
        "distributor": "digikey",
        "distributor_pn": "311-4.70KHRCT-ND",
        "manufacturer": "Yageo",
        "manufacturer_pn": "RC0402FR-074K7L",
        "matched_by": {
          "Generic": {
            "component_type": "Resistor",
            "resistance": {
              "value": "4700.0",
              "tolerance": "0.0",
              "unit": "Ohms"
            },
            "package": "0402"
          }
        }
      }
    ]
  }
]
--- STDERR ---
